# webscraper-avtonet

./: HTMLScraperAvtonet.py  README.md  ScraperArticles.py  WebBot.py  main.py  pyproject.toml  pyproject.toml.bak
configuration/: avtonet_search_filter.csv
output/BMW/: found_articles.csv
output/Honda CBR/: found_articles.csv
output/R1/: found_articles.csv
output/R6/: found_articles.csv
output/Tuono/: found_articles.csv
webscraper_avtonet/: HTML_Scraper_Avtonet.py  Scraper_Articles.py  Web_Bot.py  __init__.py  __main__.py
