[tool.poetry]
name = "webscraper-avtonet"
version = "1.0.0"
description = ""
authors = ["Martin Porenta <porenta.matrtin@gmail.com>"]
readme = "README.md"
packages = [{include = "webscraper_avtonet"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
radon = "^5.1.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
